Fix bug that width of single card is too wide

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,8 +26,7 @@ header {
 
 .content-card {
 	margin: 5px;
-	width: 100%;
-  }
+}
   
 
 @media only screen and (max-width: 800px) {
